Reorganització i inici canvi etiquetes

--- a/normativa.html
+++ b/normativa.html
@@ -65,7 +65,7 @@
 		
 		<div class="row">
 			<div class="col-sm-2">LOE</div>
-			<div class="col-sm-1"><span class="badge bg-warning">MODIF.</span></div>
+			<div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
 			<div class="col-sm-8"><a href="https://boe.es/buscar/doc.php?id=BOE-A-2020-17264" target="_blank">Ley Orgánica 2/2006, de 3 de mayo, de Educación.</a></div>
 		</div>
 
@@ -73,16 +73,16 @@
 		
 		<div class="row">
 			<div class="col-sm-2">LOMCE</div>
-			<div class="col-sm-1"><span class="badge bg-danger">DEROG.</span></div>
+			<div class="col-sm-1"><span class="badge bg-dark">DEROG.</span></div>
 			<div class="col-sm-8"><a href="https://boe.es/buscar/act.php?id=BOE-A-2013-12886" target="_blank">Ley Orgánica 8/2013, de 9 de diciembre, para la mejora de la calidad educativa.</a></div>
 		</div>
 
 		<br/>
 
 		<div class="row">
-		  <div class="col-sm-2">LOMLOE</div>
-		  <div class="col-sm-1"><span class="badge bg-primary">VIGENT</span></div>
-		  <div class="col-sm-8"><a href="https://boe.es/buscar/doc.php?id=BOE-A-2020-17264" target="_blank">Ley Orgánica 3/2020, de 29 de diciembre, por la que se modifica la Ley Orgánica 2/2006, de 3 de mayo, de Educación.</a></div>
+		  	<div class="col-sm-2">LOMLOE</div>
+			<div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
+		  	<div class="col-sm-8"><a href="https://boe.es/buscar/doc.php?id=BOE-A-2020-17264" target="_blank">Ley Orgánica 3/2020, de 29 de diciembre, por la que se modifica la Ley Orgánica 2/2006, de 3 de mayo, de Educación.</a></div>
 
 		</div>
 		
@@ -99,7 +99,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Avaluació i Promoció</div>
-			<div class="col-sm-1"><span class="badge bg-danger">DEROG.</span></div>
+			<div class="col-sm-1"><span class="badge bg-dark">DEROG.</span></div>
 		  <div class="col-sm-8"><a href="https://www.boe.es/diario_boe/txt.php?id=BOE-A-2021-18812" target="_blank">Real Decreto 984/2021, de 16 de noviembre, por el que se regulan la evaluación y la promoción en la Educación Primaria, así como la evaluación, la promoción y la titulación en la Educación Secundaria Obligatoria, el Bachillerato y la Formación Profesional.</a></div>
 		</div>
 
@@ -150,31 +150,15 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Principis d'equitat i d'inclusió</div>
-		  <div class="col-sm-1"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2018/7822&L=0&&texto=&solo_titulo=1&anyo_codigo=2018&codigo=7822&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo="><button type="button" class="btn btn-info btn-sm" target="_blank">Index</button></a></div>
+		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2018/7822&L=0&&texto=&solo_titulo=1&anyo_codigo=2018&codigo=7822&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">DECRET 104/2018, de 27 de juliol, del Consell, pel qual es desenvolupen els principis d'equitat i d'inclusió en el sistema educatiu valencià. [2018/7822]</a></div>
 		</div>
 
 		<br />
 
 		<div class="row">
-		  <div class="col-sm-2">ROF Infantil i Primària</div>
-		  <div class="col-sm-1"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2019/11482&L=0&&texto=&solo_titulo=1&anyo_codigo=2019&codigo=11482&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo="><button type="button" class="btn btn-info btn-sm" target="_blank">Index</button></a></div>
-		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2019/11482&L=0&&texto=&solo_titulo=1&anyo_codigo=2019&codigo=11482&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">DECRET 253/2019, de 29 de novembre, del Consell, de regulació de l'organització i el funcionament dels centres públics que imparteixen ensenyaments d'Educació Infantil o d'Educació Primària. [2019/11482]</a></div>
-		</div>
-
-		<br />
-
-		<div class="row">
-		  <div class="col-sm-2">Organització Orientació</div>
-		  <div class="col-sm-1"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2021/6157&L=0&&texto=&solo_titulo=1&anyo_codigo=2021&codigo=6157&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo="><button type="button" class="btn btn-info btn-sm" target="_blank">Index</button></a></div>
-		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2021/6157&L=0&&texto=&solo_titulo=1&anyo_codigo=2021&codigo=6157&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">DECRET 72/2021, de 21 de maig, del Consell, d'organització de l'orientació educativa i professional en el sistema educatiu valencià. [2021/6157]</a></div>
-		</div>
-
-		<br />
-
-		<div class="row">
 		  <div class="col-sm-2">Curriculum Infantil</div>
-		  <div class="col-sm-1"><span class="badge bg-primary">VIGENT</span></div>
+		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/7571&L=0" target="_blank">DECRET 100/2022, de 29 de juliol, del Consell, pel qual s'estableix l'ordenació i el currículum d'Educació Infantil. [2022/7571] </a></div>
 		</div>
 
@@ -182,7 +166,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Curriculum Primaria</div>
-		  <div class="col-sm-1"><span class="badge bg-primary">VIGENT</span></div>
+		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/7572&L=0" target="_blank">DECRET 106/2022, de 5 d'agost, del Consell, d'ordenació i currículum de l'etapa d'Educació Primària. [2022/7572]</a></div>
 		</div>
 
@@ -191,7 +175,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Curriculum Secundària</div>
-		  <div class="col-sm-1"><span class="badge bg-primary">VIGENT</span></div>
+		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/resultat-dogv?signatura=2022/7573&L=0" target="_blank">DECRET 107/2022, de 5 d'agost, del Consell, pel qual s'estableix l'ordenació i el currículum de l'Educació Secundària Obligatòria. [2022/7573] </a></div>
 		</div>
 
@@ -199,15 +183,31 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Curriculum Batxiller</div>
-		  <div class="col-sm-1"><span class="badge bg-primary">VIGENT</span></div>
+		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/resultat-dogv?signatura=2022/7578&L=0" target="_blank">DECRET 108/2022, de 5 d'agost, del Consell, pel qual s'estableixen l'ordenació i el currículum de Batxillerat. [2022/7578] </a></div>
 		</div>
 
 		<br />
 
 		<div class="row">
+		  <div class="col-sm-2">ROF Infantil i Primària</div>
+		  <div class="col-sm-1"><span class="badge bg-info">INF</span><span class="badge bg-info">PRI</span></div>
+		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2019/11482&L=0&&texto=&solo_titulo=1&anyo_codigo=2019&codigo=11482&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">DECRET 253/2019, de 29 de novembre, del Consell, de regulació de l'organització i el funcionament dels centres públics que imparteixen ensenyaments d'Educació Infantil o d'Educació Primària. [2019/11482]</a></div>
+		</div>
+
+		<br />
+
+		<div class="row">
+		  <div class="col-sm-2">Organització Orientació</div>
+		  <div class="col-sm-1"><span class="badge bg-info">EDU</span></div>
+		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2021/6157&L=0&&texto=&solo_titulo=1&anyo_codigo=2021&codigo=6157&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">DECRET 72/2021, de 21 de maig, del Consell, d'organització de l'orientació educativa i professional en el sistema educatiu valencià. [2021/6157]</a></div>
+		</div>
+
+		<br />
+
+		<div class="row">
 		  <div class="col-sm-2">Dependència</div>
-		  <div class="col-sm-1"><span class="badge bg-primary">VIGENT</span></div>
+		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/resultat-dogv?signatura=2022/7569&L=0" target="_blank">DECRET 102/2022, de 5 d'agost, del Consell, pel qual es modifica el Decret 62/2017, de 19 de maig, del Consell, pel qual s'estableix el procediment per a reconéixer el grau de dependència a les persones i l'accés al sistema públic de serveis i prestacions econòmiques. [2022/7569] </a></div>
 		</div>
 
