--- a/normativa.html
+++ b/normativa.html
@@ -51,7 +51,7 @@
 
 
 
-<div id="myTabContent" class="tab-content">
+  <div id="myTabContent" class="tab-content">
 
   <div class="tab-pane fade show active" id="Lleis">
 
@@ -158,7 +158,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Curriculum Infantil</div>
-		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
+		  <div class="col-sm-1"><span class="badge bg-info">INF</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/7571&L=0" target="_blank">DECRET 100/2022, de 29 de juliol, del Consell, pel qual s'estableix l'ordenació i el currículum d'Educació Infantil. [2022/7571] </a></div>
 		</div>
 
@@ -166,7 +166,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Curriculum Primaria</div>
-		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
+		  <div class="col-sm-1"><span class="badge bg-info">PRI</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/7572&L=0" target="_blank">DECRET 106/2022, de 5 d'agost, del Consell, d'ordenació i currículum de l'etapa d'Educació Primària. [2022/7572]</a></div>
 		</div>
 
@@ -175,7 +175,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Curriculum Secundària</div>
-		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
+		  <div class="col-sm-1"><span class="badge bg-info">SEC</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/resultat-dogv?signatura=2022/7573&L=0" target="_blank">DECRET 107/2022, de 5 d'agost, del Consell, pel qual s'estableix l'ordenació i el currículum de l'Educació Secundària Obligatòria. [2022/7573] </a></div>
 		</div>
 
@@ -183,14 +183,14 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Curriculum Batxiller</div>
-		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
+		  <div class="col-sm-1"><span class="badge bg-info">BAT</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/resultat-dogv?signatura=2022/7578&L=0" target="_blank">DECRET 108/2022, de 5 d'agost, del Consell, pel qual s'estableixen l'ordenació i el currículum de Batxillerat. [2022/7578] </a></div>
 		</div>
 
 		<br />
 
 		<div class="row">
-		  <div class="col-sm-2">ROF Infantil i Primària</div>
+		  <div class="col-sm-2">ROF INF-PRI</div>
 		  <div class="col-sm-1"><span class="badge bg-info">INF</span><span class="badge bg-info">PRI</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2019/11482&L=0&&texto=&solo_titulo=1&anyo_codigo=2019&codigo=11482&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">DECRET 253/2019, de 29 de novembre, del Consell, de regulació de l'organització i el funcionament dels centres públics que imparteixen ensenyaments d'Educació Infantil o d'Educació Primària. [2019/11482]</a></div>
 		</div>
@@ -198,8 +198,16 @@
 		<br />
 
 		<div class="row">
+		  <div class="col-sm-2">ROF SEC-BAT-FP</div>
+		  <div class="col-sm-1"><span class="badge bg-info">SEC</span><span class="badge bg-info">BAT</span><span class="badge bg-info">FP</span></div>
+		  <div class="col-sm-8"><a href="https://dogv.gva.es/resultat-dogv?signatura=2019/11616&L=0&&texto=&solo_titulo=1&anyo_codigo=2019&codigo=11616&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">DECRET 252/2019, de 29 de novembre, del Consell, de regulació de l'organització i el funcionament dels centres públics que imparteixen ensenyaments d'Educació Secundària Obligatòria, Batxillerat i Formació Professional. [2019/11616]</a></div>
+		</div>
+
+		<br />
+
+		<div class="row">
 		  <div class="col-sm-2">Organització Orientació</div>
-		  <div class="col-sm-1"><span class="badge bg-info">EDU</span></div>
+		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2021/6157&L=0&&texto=&solo_titulo=1&anyo_codigo=2021&codigo=6157&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">DECRET 72/2021, de 21 de maig, del Consell, d'organització de l'orientació educativa i professional en el sistema educatiu valencià. [2021/6157]</a></div>
 		</div>
 
@@ -238,7 +246,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Transició Primària-Secundària</div>
-		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2011/7216&L=0&&texto=&solo_titulo=1&anyo_codigo=2011&codigo=7216&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">ORDE 46/2011, de 8 de juny, de la Conselleria d'Educació, per la qual es regula la transició des de l'etapa d'Educació Primària a l'Educació Secundària Obligatòria a la Comunitat Valenciana. [2011/7216]</a></div>
 		</div>
 
@@ -246,7 +254,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Unitats Específiques Orientació</div>
-		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
 		  <div class="col-sm-8"><a href=https://dogv.gva.es/va/resultat-dogv?signatura=2021/7529&L=0&&texto=&solo_titulo=1&anyo_codigo=2021&codigo=7529&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">ORDRE 23/2021, de 6 de juliol, de la Conselleria d'Educació, Cultura i Esport, per la qual es determinen els criteris de creació de llocs de professorat de l'especialitat d'Orientació Educativa en els equips d'Orientació Educativa, i per la qual s'ordena la creació de les unitats especialitzades d'Orientació. [2021/7529]</a></div>
 		</div>
 
@@ -254,7 +262,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Full de notificació Atenció SocioPrisopedagògica</div>
-		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2021/7878&L=0&&texto=&solo_titulo=1&anyo_codigo=2021&codigo=7878&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">ORDRE 5/2021, de 15 de juliol, de la Vicepresidència i Conselleria d'Igualtat i Polítiques Inclusives i de la Conselleria d'Educació, Cultura i Esport, per la qual s'aprova el nou full de notificació per a l'atenció socioeducativa infantil i protecció de l'alumnat menor d'edat i s'estableix la coordinació interadministrativa per a la protecció integral de la infància i adolescència. [2021/7878]</a></div>
 		</div>
 
@@ -291,7 +299,7 @@
 		
 		<div class="row">
 		  <div class="col-sm-2">Acollida Nouvingut</div>
-		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2018/5664&L=0&&texto=&solo_titulo=1&anyo_codigo=2018&codigo=5664&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ de 5 de juny de 2018, de la Conselleria d'Educació, Investigació, Cultura i Esport, per la qual es dicten instruccions i orientacions per a actuar en l'acollida d'alumnat nouvingut, especialment el desplaçat, als centres educatius de la Comunitat Valenciana. [2018/5664]</a></div>
 		</div>
 		
@@ -299,7 +307,7 @@
 		
 		<div class="row">
 		  <div class="col-sm-2">Problemes de salut crònica</div>
-		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2018/5900&L=0&&texto=&solo_titulo=1&anyo_codigo=2018&codigo=5900&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ de 13 de juny de 2018, de la Conselleria d'Educació, Investigació, Cultura i Esport i de la Conselleria de Sanitat Universal i Salut Pública, per la qual es dicten instruccions i orientacions d'atenció sanitària específica en centres educatius per a regular l'atenció sanitària a l'alumnat amb problemes de salut crònica en horari escolar, l'atenció a la urgència, així com l'administració de medicaments i l'existència de farmacioles en els centres escolars. [2018/5900]</a></div>
 		</div>
 
@@ -307,7 +315,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">ROF Centre Específic</div>
-		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2020/6396&L=0&&texto=&solo_titulo=1&anyo_codigo=2020&codigo=6396&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ de 31 juliol de 2020, de la directora general d'Inclusió Educativa, per la qual es regula, amb caràcter experimental, l'organització dels centres específics d'Educació Especial de titularitat de la Generalitat com a centres de recursos. [2020/6396]</a></div>
 		</div>
 
@@ -315,7 +323,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Absentisme Escolar</div>
-		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2021/11082&L=0&&texto=&solo_titulo=1&anyo_codigo=2021&codigo=11082&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ de 29 de setembre de 2021, de la directora general d'Inclusió Educativa, per la qual s'estableix el protocol d'actuació davant situacions d'absentisme escolar en els centres sostinguts amb fons públics de la Comunitat Valenciana que imparteixen ensenyaments obligatoris i Formació Professional Bàsica. [2021/11082]</a></div>
 		</div>
 
@@ -323,7 +331,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Línies Estratègiques Orientació i Acció Tutorial</div>
-		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2021/9988&L=0&&texto=&solo_titulo=1&anyo_codigo=2021&codigo=9988&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ d'1 d'octubre de 2021, de la directora general d'Inclusió Educativa, per la qual s'estableixen les línies estratègiques de l'orientació educativa i professional i de l'acció tutorial per al curs 2021-2022. [2021/9988]</a></div>
 		</div>
 
@@ -331,7 +339,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Detecció i Identificació NESE</div>
-		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2021/13042&L=0&&texto=&solo_titulo=1&anyo_codigo=2021&codigo=13042&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ de 23 de desembre de 2021, de la directora general d'Inclusió Educativa, per la qual es dicten instruccions per a la detecció i la identificació de les necessitats específiques de suport educatiu i les necessitats de compensació de desigualtats. [2021/13042]</a></div>
 		</div>
 
@@ -339,7 +347,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Programa PROA+</div>
-		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-1"><span class="badge bg-info">SEC</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/2701&L=0&&texto=&solo_titulo=1&anyo_codigo=2022&codigo=2701&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ de 25 de març de 2022, del secretari autonòmic d'Educació i Formació Professional, per la qual es convoca el desenvolupament d'un programa d'acompanyament, motivació i reforç escolar personalitzat a l'alumnat més vulnerable educativament dels centres docents de titularitat de la Generalitat, dins del programa de cooperació territorial «PROA+» (2021-2024). [2022/2701]</a></div>
 		</div>
 
@@ -347,7 +355,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Avaluació i Promoció</div>
-		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/3449&L=0&&texto=&solo_titulo=1&anyo_codigo=2022&codigo=3449&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">ESOLUCIÓ de 20 d'abril de 2022, de la Secretaria Autonòmica d'Educació i Formació Professional, per la qual es dicten instruccions relatives a l'avaluació final i la promoció en Educació Primària, així com a l'avaluació final, la promoció i la titulació en Educació Secundària Obligatòria, en Batxillerat, en els ensenyaments de l'Educació de les Persones Adultes i en la Formació Professional per al curs 2021-2022. [2022/3449]</a></div>
 		</div>
 		
@@ -355,23 +363,23 @@
 
 		<div class="row">
 		  <div class="col-sm-2">2022-2023 Calendari Curs</div>
-		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/5675&L=0" target="_blank"> RESOLUCIÓ de 14 de juny de 2022, del director general de Centres Docents, per la qual es fixa el calendari escolar del curs acadèmic 2022-2023 a la Comunitat Valenciana. [2022/5675] (DOGV núm. 9363 de 16.06.2022) Ref. Base de dades 005405/2022</a></div>
 		</div>
 		
 		<br />
 		
 		<div class="row">
-		  <div class="col-sm-2">2022-2023 Instruccions Inici Curs</div>
-		  <div class="col-sm-1"><span class="badge bg-primary">VIGENT</span></div>
+		  <div class="col-sm-2">2022-2023 Instruccions INF-PRI</div>
+		  <div class="col-sm-1"><span class="badge bg-info">INF</span><span class="badge bg-info">PRI</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/6454&L=0" target="_blank"> RESOLUCIÓ de 5 de juliol de 2022, del secretari autonòmic d'Educació i Formació Professional, per la qual s'aproven les instruccions per a l'organització i el funcionament dels centres que imparteixen Educació Infantil de segon cicle i Educació Primària durant el curs 2022-2023. [2022/6454]</a></div>
 		</div>
 		
 		<br />
 		
 		<div class="row">
-		  <div class="col-sm-2">2022-2023 Instruccions Secundària</div>
-		  <div class="col-sm-1"><span class="badge bg-primary">VIGENT</span></div>
+		  <div class="col-sm-2">2022-2023 SEC-BAT</div>
+		  <div class="col-sm-1"><span class="badge bg-info">ESO</span><span class="badge bg-info">BAT</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/6761&L=0i" target="_blank">RESOLUCIÓ de 12 de juliol de 2022, del secretari autonòmic d'Educació i Formació Professional, per la qual s'aproven les instruccions per a l'organització i el funcionament dels centres que imparteixen Educació Secundària Obligatòria i Batxillerat durant el curs 2022-2023 [2022/6761]</a></div>
 		</div>
 		
@@ -380,7 +388,7 @@
 	
 		<div class="row">
 		  <div class="col-sm-2">2022-2023 Instruccions CEE</div>
-		  <div class="col-sm-1"><span class="badge bg-primary">VIGENT</span></div>
+		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/7099&L=0&&texto=&solo_titulo=1&anyo_codigo=2022&codigo=7099&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ de 21 de juliol de 2022, del secretari autonòmic d'Educació i Formació Professional, per la qual es dicten instruccions per a l'organització i el funcionament dels centres d'educació especial sostinguts amb fons públics per al curs 2022-2023. [2022/7099]</a></div>
 		</div>
 		
@@ -388,7 +396,7 @@
 		
 		<div class="row">
 		  <div class="col-sm-2">2022-2023 Pla de Formació</div>
-		  <div class="col-sm-1"><span class="badge bg-primary">VIGENT</span></div>
+		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/6172&L=0" target="_blank"> RESOLUCIÓ de 28 de juny de 2022, de la Secretaria Autonòmica d'Educació i Formació Professional, per la qual s'estableix el Pla biennal de formació permanent del professorat corresponent als cursos 2022-2023 i 2023-2024. [2022/6172]</a></div>
 		</div>
 		
@@ -406,7 +414,7 @@
 		
 		<div class="row">
 		  <div class="col-sm-2">Educacors</div>
-		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
 		  <div class="col-sm-8"><a href="https://ceice.gva.es/documents/169149987/172998495/Instruccio_DGIE_PEEE.pdf" target="_blank">INSTRUCCIÓ DE LA DIRECTORA GENERAL D’INCLUSIÓ EDUCATIVA PER LA QUAL S’ESTABLEIXEN ELS PROCEDIMENTS PER A LA REALITZACIÓ DE LES PROPOSTES DE REDISTRIBUCIÓ,AMPLIACIÓ,CREACIÓ O AMORTITZACIÓ DELS LLOCS DE PERSONAL EDUCADOR D’EDUCACIÓ ESPECIAL EN CENTRES DOCENTS DE TITULARITAT DE LA GENERALITAT</a></div>
 		</div>
 		
