--- a/normativa.html
+++ b/normativa.html
@@ -269,9 +269,37 @@
 		<br />
 
 		<div class="row">
-		  <div class="col-sm-2">BOE - Currículum de Primària </div>
+		  <div class="col-sm-2">BOE - Currículum de Infantil </div>
+		  <div class="col-sm-1"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-1654&p=20220202&tn=2"><button type="button" class="btn btn-info btn-sm" target="_blank">Index</button></a></div>
+		  <div class="col-sm-8"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-1654&p=20220202&tn=2" target="_blank">Real Decreto 95/2022, de 1 de febrero, por el que se establece la ordenación y las enseñanzas mínimas de la Educación Infantil. </a></div>
+		</div>
+
+		<br />
+
+		<br />
+
+		<div class="row">
+		  <div class="col-sm-2">BOE - Currículum de Primaria </div>
 		  <div class="col-sm-1"><a href="https://boe.es/buscar/act.php?id=BOE-A-2022-12066&p=20220721&tn=2"><button type="button" class="btn btn-info btn-sm" target="_blank">Index</button></a></div>
 		  <div class="col-sm-8"><a href="https://boe.es/buscar/act.php?id=BOE-A-2022-12066&p=20220721&tn=1" target="_blank">Orden EFP/678/2022, de 15 de julio, por la que se establece el currículo y se regula la ordenación de la Educación Primaria. </a></div>
+		</div>
+
+		<br />
+
+		<div class="row">
+		  <div class="col-sm-2">BOE - Currículum de Secundaria </div>
+		  <div class="col-sm-1"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-4975&p=20220330&tn=2"><button type="button" class="btn btn-info btn-sm" target="_blank">Index</button></a></div>
+		  <div class="col-sm-8"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-4975&p=20220330&tn=1" target="_blank">Real Decreto 217/2022, de 29 de marzo, por el que se establece la ordenación y las enseñanzas mínimas de la Educación Secundaria Obligatoria. </a></div>
+		</div>
+
+		<br />
+
+		<br />
+
+		<div class="row">
+		  <div class="col-sm-2">BOE - Currículum de Bachiller </div>
+		  <div class="col-sm-1"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-5521&p=20220406&tn=2"><button type="button" class="btn btn-info btn-sm" target="_blank">Index</button></a></div>
+		  <div class="col-sm-8"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-5521&p=20220406&tn=1" target="_blank">Real Decreto 243/2022, de 5 de abril, por el que se establecen la ordenación y las enseñanzas mínimas del Bachillerato. </a></div>
 		</div>
 
 		<br />
@@ -356,7 +384,7 @@
 		<div class="row">
 		  <div class="col-sm-2">Avaluació i Promoció</div>
 		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
-		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/3449&L=0&&texto=&solo_titulo=1&anyo_codigo=2022&codigo=3449&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">ESOLUCIÓ de 20 d'abril de 2022, de la Secretaria Autonòmica d'Educació i Formació Professional, per la qual es dicten instruccions relatives a l'avaluació final i la promoció en Educació Primària, així com a l'avaluació final, la promoció i la titulació en Educació Secundària Obligatòria, en Batxillerat, en els ensenyaments de l'Educació de les Persones Adultes i en la Formació Professional per al curs 2021-2022. [2022/3449]</a></div>
+		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/3449&L=0&&texto=&solo_titulo=1&anyo_codigo=2022&codigo=3449&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ de 20 d'abril de 2022, de la Secretaria Autonòmica d'Educació i Formació Professional, per la qual es dicten instruccions relatives a l'avaluació final i la promoció en Educació Primària, així com a l'avaluació final, la promoció i la titulació en Educació Secundària Obligatòria, en Batxillerat, en els ensenyaments de l'Educació de les Persones Adultes i en la Formació Professional per al curs 2021-2022. [2022/3449]</a></div>
 		</div>
 		
 		<br />
