--- a/formacio.html
+++ b/formacio.html
@@ -74,6 +74,21 @@
   </div>
 
 
+  <div class="tab-pane fade show active" id="Publicacions">
+
+	  	<br />
+
+		<h3>Publicacions</h3>
+		<div class="row">
+		  <div class="col-sm-2">Revista d'Educació</div>
+		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-8"><a href="https://www.educacionyfp.gob.es/revista-de-educacion/inicio.html" target="_blank">Revista d'Educació</a></div>
+
+		</div>
+
+		<br/>
+
+  </div>
 
   
   <div class="tab-pane fade" id="dropdown1">
