Escolarització Aules Específiques

--- a/normativa.html
+++ b/normativa.html
@@ -57,7 +57,7 @@
 
 	  	<br />
 
-		<h3>Lleis Orgàniques</h3>
+		<h3>Lleis Orgàniques - BOE</h3>
 
 		<hr >
 
@@ -93,7 +93,7 @@
 
 	  <br />
 
-		<h3>Real Decrets</h3>
+		<h3>Real Decrets - BOE</h3>
 
 		<hr />
 
@@ -144,7 +144,7 @@
 
 		<br />
 
-		<h3>Decrets</h3>
+		<h3>Decrets DOGV</h3>
 
 		<hr />
 
@@ -231,7 +231,7 @@
 
 	  	<br />
 
-		<h3>Ordres</h3>
+		<h3>Ordres - DOGV</h3>
 
 		<hr />
 
@@ -277,7 +277,7 @@
 	  
 	  	<br />
 
-		<h3>Resolució</h3>
+		<h3>Resolució - DOGV</h3>
 
 	  	<hr />
 
@@ -399,7 +399,7 @@
  
   <div class="tab-pane fade show active" id="Resolució">
 	  <br />
-		<h3>Instruccions</h3>
+		<h3>Instruccions - Conselleria d'Educació, Cultura i Espor</h3>
 
 		<hr />
 
@@ -412,6 +412,18 @@
 		</div>
 		
 	  <br />
+
+		<br />
+		
+		<div class="row">
+		  <div class="col-sm-2">Unitats Específiques</div>
+		  <div class="col-sm-1"><span class="badge bg-primary">GVA</span></div>
+		  <div class="col-sm-1"><a href="https://ceice.gva.es/va/web/inclusioeducativa/escolaritzacio"><button type="button" class="btn btn-info btn-sm" target="_blank">ESCOLA</button></a></div>
+		  <div class="col-sm-8"><a href="https://ceice.gva.es/documents/169149987/172118798/Instruccions_procediments_UE_2022_2023.pdf" target="_blank">Habilitació, modificació i no funcionament unitats específiques, curs 2022-2023 / Instruccions de la directora general d'Inclusió Educativa sobre el procediment d'habilitació, modificació i no funcionament d'unitats específiques ubicades en centres ordinaris d'educació primària i educació secundària de titularitat de la Generalitat Valenciana per al curs 2022/23 (Nou) - Mirar annexes accedit des del botó ESCOLA</a></div>
+		</div>
+		
+	  <br />
+
 
   </div>
 
