--- a/normativa.html
+++ b/normativa.html
@@ -144,7 +144,7 @@
 
 		<br />
 
-		<h3>Decrets DOGV</h3>
+		<h3>Decrets - DOGV</h3>
 
 		<hr />
 
@@ -399,15 +399,16 @@
  
   <div class="tab-pane fade show active" id="Resolució">
 	  <br />
-		<h3>Instruccions - Conselleria d'Educació, Cultura i Espor</h3>
+		<h3>Instruccions - Conselleria d'Educació, Cultura i Esport</h3>
 
 		<hr />
 
 		<br />
 		
 		<div class="row">
-		  <div class="col-sm-2">Educacors</div>
-		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
+		  <div class="col-sm-2">Educadors</div>
+		  <div class="col-sm-1"><a href="https://ceice.gva.es/va/web/inclusioeducativa/personal-no-docent/normativa"><button type="button" class="btn btn-danger btn-sm" target="_blank">NO DOCENT</button></a></div>
+		  <div class="col-sm-1"><span class="badge bg-primary">GVA</span></div>
 		  <div class="col-sm-8"><a href="https://ceice.gva.es/documents/169149987/172998495/Instruccio_DGIE_PEEE.pdf" target="_blank">INSTRUCCIÓ DE LA DIRECTORA GENERAL D’INCLUSIÓ EDUCATIVA PER LA QUAL S’ESTABLEIXEN ELS PROCEDIMENTS PER A LA REALITZACIÓ DE LES PROPOSTES DE REDISTRIBUCIÓ,AMPLIACIÓ,CREACIÓ O AMORTITZACIÓ DELS LLOCS DE PERSONAL EDUCADOR D’EDUCACIÓ ESPECIAL EN CENTRES DOCENTS DE TITULARITAT DE LA GENERALITAT</a></div>
 		</div>
 		
@@ -417,9 +418,9 @@
 		
 		<div class="row">
 		  <div class="col-sm-2">Unitats Específiques</div>
+		  <div class="col-sm-1"><a href="https://ceice.gva.es/va/web/inclusioeducativa/escolaritzacio"><button type="button" class="btn btn-warning btn-sm" target="_blank">ESCOLARIT.</button></a></div>
 		  <div class="col-sm-1"><span class="badge bg-primary">GVA</span></div>
-		  <div class="col-sm-1"><a href="https://ceice.gva.es/va/web/inclusioeducativa/escolaritzacio"><button type="button" class="btn btn-info btn-sm" target="_blank">ESCOLA</button></a></div>
-		  <div class="col-sm-8"><a href="https://ceice.gva.es/documents/169149987/172118798/Instruccions_procediments_UE_2022_2023.pdf" target="_blank">Habilitació, modificació i no funcionament unitats específiques, curs 2022-2023 / Instruccions de la directora general d'Inclusió Educativa sobre el procediment d'habilitació, modificació i no funcionament d'unitats específiques ubicades en centres ordinaris d'educació primària i educació secundària de titularitat de la Generalitat Valenciana per al curs 2022/23 (Nou) - Mirar annexes accedit des del botó ESCOLA</a></div>
+		  <div class="col-sm-8"><a href="https://ceice.gva.es/documents/169149987/172118798/Instruccions_procediments_UE_2022_2023.pdf" target="_blank">Habilitació, modificació i no funcionament unitats específiques, curs 2022-2023 / Instruccions de la directora general d'Inclusió Educativa sobre el procediment d'habilitació, modificació i no funcionament d'unitats específiques ubicades en centres ordinaris d'educació primària i educació secundària de titularitat de la Generalitat Valenciana per al curs 2022/23</a></div>
 		</div>
 		
 	  <br />
